# MlirCompiler

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark_parallel.sh  compile_best.sh  compile_parallel.sh  compile_with_parallel.sh  final_benchmark  input.mlir  matmul  matmul_benchmark  matmul_omp  openblas  output.ll  output.mlir  output.s  output_fastmath.ll  passtest.mlir  reference.c  test.mlir  test1.mlir  testcanon.mlir
include/Compiler/: CMakeLists.txt
include/Compiler/API/: NovaCompilerAPI.h
include/Compiler/Dialect/nova/: CMakeLists.txt  NovaOps.h  NovaOps.td  TypeInference.h
include/Compiler/Pipeline/: Pipeline.h
include/Compiler/Transforms/: AffineFullUnroll.cpp  CMakeLists.txt  Passes.h  Passes.td  PromoteAccumulator.h
include/Compiler/Translation/NovaToArith/: NovaToArith.cpp  NovaToArith.h
include/Compiler/Translation/NovaToLinalg/: NovaToLinalg.cpp  TNovaToLinalg.cpp
lib/: CMakeLists.txt
lib/API/: NovaCompilerAPI.cpp
lib/Dialect/nova/: CMakeLists.txt  NovaCanonicalizations.cpp  NovaOps.cpp  TypeInference.cpp
lib/Pipeline/: CMakeLists.txt  Pipeline.cpp  Pipelinegpu.cpp
lib/Transforms/: CMakeLists.txt  FuseMatmulBias.cpp  FuseMatmulInit.cpp  ParallelizeOuterLoops.cpp  PromoteAccumulator.cpp
optimizations/cpu/: matmul_optimized.mlir
test/: loweringtest.mlir  matmul_broadcast.mlir  openblas.cpp  output.mlir  output_fastmath.ll  test.mlir  test2.mlir  test_fusion.mlir  testexpo.mlir  time.cpp
tools/nova-opt/: CMakeLists.txt  nova-opt.cpp
tools/nova-translate/: CMakeLists.txt  nova-translate.cpp
(+6 files in other folders)
